Improved form structure and accessibility for login and register modals

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -75,21 +75,28 @@
                         {% include "login_modal.html" %}
                     {% endwith %}
                 </div>
-<!-- Register Modal -->
-<div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="registerModalLabel">Register</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                {% with form=register_form %}
-                    {% include "register_modal.html" %}
-                {% endwith %}
-            </div>
+            </div> <!-- Closing modal-content -->
+        </div> <!-- Closing modal-dialog -->
+    </div> <!-- Closing loginModal -->
+
+    <!-- Register Modal -->
+    <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="registerModalLabel">Register</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    {% with form=register_form %}
+                        {% include "register_modal.html" %}
+                    {% endwith %}
+                </div>
+            </div> <!-- Closing modal-content -->
+        </div> <!-- Closing modal-dialog -->
+    </div> <!-- Closing registerModal -->
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
